force-app/main/default/objects/Survey_Monkey__c/Survey_Monkey__c.object-meta.xml
<CustomObject>
    <description>Survey Monkey test</description>
    <label>Survey Monkey</label>
    <nameField>
        <label>Survey Monkey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Monkey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>