force-app/main/default/objects/Survey_Monkey__c/fields/Company_Name_Survey__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Survey__c</fullName>
    <label>Company Name (Survey)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>