force-app/main/default/objects/Survey_Monkey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup from Survey Monkey</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Monkey</relationshipLabel>
    <relationshipName>Survey_Monkey</relationshipName>
    <type>Lookup</type>
</CustomField>