force-app/main/default/objects/Survey_Monkey__c/fields/Cost_of_Packaging_lable__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Packaging_lable__c</fullName>
    <label>Cost of Packaging lable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not at all important</fullName>
            </value>
            <value>
                <fullName>Slightly important</fullName>
            </value>
            <value>
                <fullName>Moderately important</fullName>
            </value>
            <value>
                <fullName>Very important</fullName>
            </value>
            <value>
                <fullName>Extremely important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>