force-app/main/default/objects/Survey_Monkey__c/fields/Dimensional_Weight__c.field-meta.xml
<CustomField>
    <fullName>Dimensional_Weight__c</fullName>
    <label>Dimensional Weight</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not_at_all_important</fullName>
                <label>Not at all important</label>
            </value>
            <value>
                <fullName>Slightly_important</fullName>
                <label>Slightly important</label>
            </value>
            <value>
                <fullName>Moderately_important</fullName>
                <label>Moderately important</label>
            </value>
            <value>
                <fullName>Very_important</fullName>
                <label>Very important</label>
            </value>
            <value>
                <fullName>Extremely_important</fullName>
                <label>Extremely important</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>