force-app/main/default/objects/Survey_Monkey__c/fields/Ease_of_Use_in_Operations__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Use_in_Operations__c</fullName>
    <label>Ease of Use in Operations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not at all important</fullName>
            </value>
            <value>
                <fullName>Slightly important</fullName>
            </value>
            <value>
                <fullName>Moderately important</fullName>
            </value>
            <value>
                <fullName>Very important</fullName>
            </value>
            <value>
                <fullName>Extremely important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>