force-app/main/default/objects/Survey_Monkey__c/fields/Email_Survey__c.field-meta.xml
<CustomField>
    <fullName>Email_Survey__c</fullName>
    <label>Email (Survey)</label>
    <type>Email</type>
</CustomField>