force-app/main/default/objects/Survey_Monkey__c/fields/First_Name_Survey__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Survey__c</fullName>
    <inlineHelpText>Survey recipients first name</inlineHelpText>
    <label>First Name (Survey)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>