force-app/main/default/objects/Survey_Monkey__c/fields/Last_Name_Survey__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Survey__c</fullName>
    <inlineHelpText>Survey recipients last name</inlineHelpText>
    <label>Last Name (Survey)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>