force-app/main/default/objects/Survey_Monkey__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>Net Promoter Score</description>
    <inlineHelpText>Not at all likely - 0
Extremely likely - 10</inlineHelpText>
    <label>NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>