force-app/main/default/objects/Survey_Monkey__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Tell Us About Your Company</description>
    <label>Number of Locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2 - 9</fullName>
            </value>
            <value>
                <fullName>10 - 49</fullName>
            </value>
            <value>
                <fullName>50 - 99</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>