force-app/main/default/objects/Survey_Monkey__c/fields/Other_please_specify_3__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify_3__c</fullName>
    <label>Other (please specify 3)</label>
    <type>TextArea</type>
</CustomField>