force-app/main/default/objects/Survey_Monkey__c/fields/Other_please_specify__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify__c</fullName>
    <label>Other (please specify)</label>
    <type>TextArea</type>
</CustomField>