force-app/main/default/objects/Survey_Monkey__c/fields/Packaging_Challenge_for_2021__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Challenge_for_2021__c</fullName>
    <label>Packaging Challenge for 2021</label>
    <type>TextArea</type>
</CustomField>