force-app/main/default/objects/Survey_Monkey__c/fields/Packaging_Operations_Automation__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Operations_Automation__c</fullName>
    <label>Packaging Operations Automation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Automated</fullName>
            </value>
            <value>
                <fullName>Semi-Automated</fullName>
            </value>
            <value>
                <fullName>Manual - Not Automated</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>