force-app/main/default/objects/Survey_Monkey__c/fields/Preferred_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Distributor__c</fullName>
    <label>Preferred Distributor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlantic Packaging</fullName>
            </value>
            <value>
                <fullName>Bunzl</fullName>
            </value>
            <value>
                <fullName>Crown Packaging</fullName>
            </value>
            <value>
                <fullName>Landsberg Orora</fullName>
            </value>
            <value>
                <fullName>Shorr Packaging</fullName>
            </value>
            <value>
                <fullName>Stephen Gould</fullName>
            </value>
            <value>
                <fullName>Uline</fullName>
            </value>
            <value>
                <fullName>Veritiv</fullName>
            </value>
            <value>
                <fullName>Victory</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>No preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>