force-app/main/default/objects/Survey_Monkey__c/fields/Primary_Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Industry__c</fullName>
    <description>Tell Us About Your Company</description>
    <label>Primary Business Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food &amp; Beverage Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other Manufacturing</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Retail (on- or off-line)</fullName>
            </value>
            <value>
                <fullName>Contract Packaging/3PL</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>