force-app/main/default/objects/Survey_Monkey__c/fields/Primary_Packaging_Materials__c.field-meta.xml
<CustomField>
    <fullName>Primary_Packaging_Materials__c</fullName>
    <label>Primary Packaging Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bags/Pouches</fullName>
            </value>
            <value>
                <fullName>Bister Packs</fullName>
            </value>
            <value>
                <fullName>Bundling/Shrink Film</fullName>
            </value>
            <value>
                <fullName>Cans</fullName>
            </value>
            <value>
                <fullName>Corrugated</fullName>
            </value>
            <value>
                <fullName>Cushioning/Foam</fullName>
            </value>
            <value>
                <fullName>Folding Cartons</fullName>
            </value>
            <value>
                <fullName>Glass Bottles/Jars</fullName>
            </value>
            <value>
                <fullName>Molded Pulp</fullName>
            </value>
            <value>
                <fullName>Plastic Containers</fullName>
            </value>
            <value>
                <fullName>Printed and Non-Printed Specialty Film</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>