force-app/main/default/objects/Survey_Monkey__c/fields/Qty_employees_in_Org__c.field-meta.xml
<CustomField>
    <fullName>Qty_employees_in_Org__c</fullName>
    <description>Tell Us About Your Company</description>
    <label>Qty Employees in Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fewer than 50</fullName>
            </value>
            <value>
                <fullName>50 -99</fullName>
            </value>
            <value>
                <fullName>100 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 999</fullName>
            </value>
            <value>
                <fullName>1,000 - 9,999</fullName>
            </value>
            <value>
                <fullName>10,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>