force-app/main/default/objects/Survey_Monkey__c/fields/Reason_for_Score__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Score__c</fullName>
    <inlineHelpText>255 characters allowed</inlineHelpText>
    <label>Reason for Score</label>
    <type>TextArea</type>
</CustomField>