force-app/main/default/objects/Survey_Monkey__c/fields/Security_Tamper_Resistance__c.field-meta.xml
<CustomField>
    <fullName>Security_Tamper_Resistance__c</fullName>
    <label>Security/Tamper Resistance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not at all important</fullName>
            </value>
            <value>
                <fullName>Slightly important</fullName>
            </value>
            <value>
                <fullName>Moderately important</fullName>
            </value>
            <value>
                <fullName>Very important</fullName>
            </value>
            <value>
                <fullName>Extremely important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>