force-app/main/default/objects/Survey_Monkey__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <inlineHelpText>This is the address where submitted wants promotional materials shipped to</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>