force-app/main/default/objects/Survey_Monkey__c/fields/Shipping_Preference__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Preference__c</fullName>
    <inlineHelpText>Preference for shipping promotional materials</inlineHelpText>
    <label>Shipping Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>