force-app/main/default/objects/Survey_Monkey__c/fields/Shipping_State_Initials__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Initials__c</fullName>
    <label>Shipping State Initials</label>
    <length>8</length>
    <type>Text</type>
</CustomField>