force-app/main/default/objects/Survey_Monkey__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <label>Survey Name</label>
    <type>TextArea</type>
</CustomField>