force-app/main/default/objects/Survey_Monkey__c/fields/Title_Survey__c.field-meta.xml
<CustomField>
    <fullName>Title_Survey__c</fullName>
    <label>Title (Survey)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>