force-app/main/default/objects/Survey_Monkey__c/fields/Traceability_Chain_of_Custody__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Chain_of_Custody__c</fullName>
    <label>Traceability/Chain of Custody</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not at all important</fullName>
            </value>
            <value>
                <fullName>Slightly important</fullName>
            </value>
            <value>
                <fullName>Moderately important</fullName>
            </value>
            <value>
                <fullName>Very important</fullName>
            </value>
            <value>
                <fullName>Extremely important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>