force-app/main/default/objects/Survey_Monkey__c/recordTypes/NPS_Q4_2021_01.recordType-meta.xml
<RecordType>
    <fullName>NPS_Q4_2021_01</fullName>
    <active>true</active>
    <label>NPS Q4 2021</label>
</RecordType>