force-app/main/default/objects/Survey_Monkey__c/recordTypes/Packaging_Industry_Survey.recordType-meta.xml
<RecordType>
    <fullName>Packaging_Industry_Survey</fullName>
    <active>true</active>
    <description>Testing set up</description>
    <label>Packaging Industry Survey</label>
</RecordType>